# kexecboot

./: .gitignore  1  Makefile  Makefile.am  README  Readme  boot.cfg  cfgparser.c  cfgparser.h  configparser.c  configparser.h  configure.ac  devicescan.c  devicescan.h  evdevs.c  evdevs.h  ext3_fs.h  fb.c  fb.h  fstype.c  fstype.h  gui.c  gui.h  hash.c  hash.h  kexecboot.c  kexecboot.h  main  main.c  menu.c  menu.h  mounttest  mounttest.c  reiserfs_fs.h  rgb.c  rgb.h  rgbtab.h  termseq.h  tui.c  util.c  (+3 more)
.github/: FUNDING.yml
.github/workflows/: test.yml
fstype/: ext2_fs.h  ext3_fs.h  ext4_fs.h  f2fs_fs.h  fstype.c  fstype.h  fstype.h.orig  gfs2_fs.h  luks_fs.h  minix_fs.h  nilfs_fs.h  ocfs2_fs.h  reiser4_fs.h  squashfs_fs.h  xfs_sb.h
machine/: mtd-user.h  zaurus.c  zaurus.h
res/: back1.xpm  bdftoc.c  boot.cfg  cf-img.h  cf.xpm  hd.xpm  info.xpm  logo-img.h  logo.xpm  make-image-header.sh  memory-img.h  memory.xpm  mmc-img.h  mmc.xpm  sd.xpm  theme-gui.h  theme-tui.h  theme.h
res/fonts/: font.h  radeon-font.h  ter-u16n-ascii.h
res/icons/: back.xpm  debug.xpm  exit.xpm  memory.xpm  mmc.xpm  reboot.xpm  rescan.xpm  shutdown.xpm  storage.xpm  system.xpm
res/icons.old/: debug.xpm  memory.xpm  storage.xpm
src/: Makefile.am  cfgparser.c  devicescan.c  devicescan.h  evdevs.c  evdevs.h  fb.c  fb.h  global.c  gui.c  gui.h  kexecboot.c  kexecboot.h  menu.c  menu.h  rgb.h  rgbtab.h  tui.h  util.c  util.h  xpm.c
src/fstype/: fstype.c  reiser4_fs.h
